added gzip compressor

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=hkjchzcxvysdafas2345345akljkjkbz
 
+GZIP_LEVEL=6
+
 ES_MEM_LIMIT=1073741824
 KB_MEM_LIMIT=1073741824
 LS_MEM_LIMIT=1073741824
